<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">
  <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp"
      android:id="@+id/nameTextInputLayout">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:id="@+id/lastnameTextInputLayout"
      app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout"
      app:layout_constraintStart_toStartOf="@+id/nameTextInputLayout"
      app:layout_constraintEnd_toEndOf="@+id/nameTextInputLayout">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_hint"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:id="@+id/ageTextInputLayout"
      app:layout_constraintStart_toStartOf="@+id/lastnameTextInputLayout"
      app:layout_constraintTop_toBottomOf="@+id/lastnameTextInputLayout"
      app:layout_constraintEnd_toStartOf="@+id/guideline2">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/age_hint"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.constraint.Guideline
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/guideline2"
      app:layout_constraintGuide_begin="190dp"
      android:orientation="vertical"/>
  <TextView
      android:text="@string/sex_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/sexTextView"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toTopOf="@+id/ageTextInputLayout"/>
  <RadioGroup
      android:id="@+id/sexRadioGroup"
      android:layout_width="116dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toBottomOf="@+id/sexTextView"
      app:layout_constraintHorizontal_bias="0.684">
    <RadioButton
        android:text="@string/male_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/maleRadioButton"
        android:layout_weight="1"/>
    <RadioButton
        android:text="@string/female_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/femaleRadioButton"
        android:layout_weight="1"/>
  </RadioGroup>
  <android.support.constraint.Guideline
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/guideline4"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="230dp"/>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/addressTextInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline4"
      app:layout_constraintEnd_toEndOf="parent" >

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:hint="@string/address_hint"/>
  </android.support.design.widget.TextInputLayout>
  <TextView
      android:text="@string/state_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/stateTextView"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@+id/addressTextInputLayout"
      app:layout_constraintStart_toStartOf="parent"/>
  <Spinner
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/stateSpinner"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:entries="@array/states"
      app:layout_constraintTop_toBottomOf="@+id/stateTextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />
  <android.support.design.widget.TextInputLayout
      android:id="@+id/emailTextInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/stateSpinner"
      app:layout_constraintEnd_toEndOf="parent">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/numberphoneTextInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numberphone_hint"/>
  </android.support.design.widget.TextInputLayout>
  <android.support.constraint.Guideline
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/guideline"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="56dp"/>
  <TextView
      android:text="@string/interest_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView2"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toBottomOf="@+id/numberphoneTextInputLayout"
      app:layout_constraintStart_toStartOf="parent" />
  <CheckBox
      android:text="@string/history_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/historyCheckedTextView"
      android:layout_marginStart="8dp"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      android:layout_marginTop="8dp"/>
  <CheckBox
      android:text="@string/geography_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/geographyCheckedTextView"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toBottomOf="@+id/historyCheckedTextView"
      android:layout_marginTop="24dp"/>
  <CheckBox
      android:text="@string/philosophy_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/philosophyCheckedTextView"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toBottomOf="@+id/geographyCheckedTextView"
      android:layout_marginTop="24dp"/>

  <android.support.constraint.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="226dp" />
  <CheckBox
      android:text="@string/mathematics_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/mathematicsCheckedTextView"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toTopOf="@+id/historyCheckedTextView"/>
  <CheckBox
      android:text="@string/spanish_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/spanishCheckedTextView"
      android:layout_marginTop="24dp"
      app:layout_constraintTop_toBottomOf="@+id/mathematicsCheckedTextView"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      android:layout_marginStart="8dp"/>
  <CheckBox
      android:text="@string/languages_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/languagesCheckedTextView"
      android:layout_marginTop="24dp"
      app:layout_constraintTop_toBottomOf="@+id/spanishCheckedTextView"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>
